err/pdf-text-overlay.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PIL'...
Listing './lib/python3.5/site-packages/PIL/.libs'...
Listing './lib/python3.5/site-packages/Pillow-5.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pdf_text_overlay'...
Listing './lib/python3.5/site-packages/pdf_text_overlay-0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyPdf'...
Compiling './lib/python3.5/site-packages/pyPdf/generic.py'...
***   File "./lib/python3.5/site-packages/pyPdf/generic.py", line 102
    raise utils.PdfReadError, "error reading null object"
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyPdf/pdf.py'...
***   File "./lib/python3.5/site-packages/pyPdf/pdf.py", line 655
    raise Exception, "file has not been decrypted"
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyPdf/utils.py'...
***   File "./lib/python3.5/site-packages/pyPdf/utils.py", line 77
    raise TypeError, "sequence indices must be integers"
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyPdf-1.13.egg-info'...
Listing './lib/python3.5/site-packages/reportlab'...
Listing './lib/python3.5/site-packages/reportlab/.libs'...
Listing './lib/python3.5/site-packages/reportlab/fonts'...
Listing './lib/python3.5/site-packages/reportlab/graphics'...
Listing './lib/python3.5/site-packages/reportlab/graphics/barcode'...
Listing './lib/python3.5/site-packages/reportlab/graphics/charts'...
Listing './lib/python3.5/site-packages/reportlab/graphics/samples'...
Listing './lib/python3.5/site-packages/reportlab/graphics/widgets'...
Listing './lib/python3.5/site-packages/reportlab/lib'...
Listing './lib/python3.5/site-packages/reportlab/pdfbase'...
Listing './lib/python3.5/site-packages/reportlab/pdfgen'...
Listing './lib/python3.5/site-packages/reportlab/platypus'...
Listing './lib/python3.5/site-packages/reportlab-3.4.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
